# Copyright (C) 2019 National Institute of Informatics
# 
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
name = sinetstream
version = 0.9.5
license = Apache License, Version 2.0
license_files =
    LICENSE

[options]
package_dir=
    =src
packages = find:
zip_safe = False
install_requires =
  pyyaml
tests_require = 
  pytest
  pytest-cov
  pytest-pep8
setup_requires =
  pytest-runner

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
addopts = --color=no --capture=no --fulltrace --pep8 --durations=0 --cov=sinetstream --cov-report term --cov-report=html
timeout = 10
testpaths =
  tests
  src
markers =
    pep8
pep8maxlinelength = 100
