# Copyright (C) 2019 National Institute of Informatics
# 
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
name = sinetstream
version = 1.5.2
description = Library for operating messaging systems such as Apache Kafka and MQTT with the same API.
long_description = file: README.en.md
long_description_content_type = text/markdown
url = https://github.com/nii-gakunin-cloud/sinetstream
license = Apache License, Version 2.0
license_files =
    ../LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Natural Language :: Japanese
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir=
    =src
packages = find:
zip_safe = False
install_requires =
  pyyaml
  pycryptodomex
  avro-python3
  promise
tests_require = 
  pytest
  pytest-cov
  pytest-flake8
  pytest-timeout
  pytest-html==2.0.1
setup_requires =
  pytest-runner
python_requires = >= 3.6

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
addopts = --color=no --capture=no --flake8 --durations=0 --cov=sinetstream --cov-report term --cov-report=html:output/htmlcov --junitxml=output/junit-report.xml --html=output/report.html
timeout = 60
testpaths =
  tests
  src
markers =
    flake8
flake8-max-line-length = 110
junit_family = xunit2
