# Copyright (C) 2019 National Institute of Informatics
# 
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
name = sinetstream-kafka
version = 0.9.7
license = Apache License, Version 2.0
license_files =
    LICENSE

[options]
package_dir=
    =src
packages = find_namespace:
zip_safe = False
install_requires =
  sinetstream>=0.9.7
  kafka-python
tests_require = 
  pytest
  pytest-cov
  pytest-pep8
setup_requires =
  pytest-runner
namespace_packages =
  sinetstream_plugins

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
addopts = --color=no --capture=no --fulltrace --pep8 --durations=0 --cov=sinetstream_plugins --cov-report term --cov-report=html
timeout = 10
testpaths =
  tests
  src
markers =
    pep8
pep8maxlinelength = 100

[options.entry_points]
sinetstream.reader =
    kafka = sinetstream_plugins.kafka:KafkaReader
sinetstream.writer =
    kafka = sinetstream_plugins.kafka:KafkaWriter
