# Copyright (C) 2022 National Institute of Informatics
# 
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sinetstream_cli"
description = "SINETStream Command Line Interface"
requires-python = ">=3.8"       # PythonVERSION
license = {text = "Apache License, Version 2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
]
dependencies = [
    "sinetstream>=1.9.1",       # SINETStreamVERSION
    "sinetstream-kafka>=1.9.1", # SINETStreamVERSION
    "sinetstream-mqtt>=1.9.1",  # SINETStreamVERSION
    "sinetstream-s3>=1.9.1",    # SINETStreamVERSION
]
#dynamic = ["version"]
version = "1.9.1"       # SINETStreamVERSION

[project.scripts]
sinetstream_cli = "sinetstream_cli.sinetstream_cli:main"

[project.urls]
homepage = "https://github.com/nii-gakunin-cloud/sinetstream/tree/main/python/sample/cli"
repository = "https://github.com/nii-gakunin-cloud/sinetstream"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
