[metadata]
name = sinetstream-queue
version = 1.2.0

[options]
package_dir=
    =src
packages = find_namespace:
zip_safe = False
namespace_packages =
  ssplugin
install_requires =
  sinetstream>=1.2.0
  promise
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
sinetstream.reader =
    queue = ssplugin.queue:QueueReader
sinetstream.writer =
    queue = ssplugin.queue:QueueWriter
sinetstream.async_reader =
    queue = ssplugin.queue:QueueAsyncReader
sinetstream.async_writer =
    queue = ssplugin.queue:QueueAsyncWriter
