[metadata]
name = sinetstream-type-map-yaml
version = 1.0.0

[options]
package_dir=
    =src
packages = find_namespace:
zip_safe = False
namespace_packages =
  ssplugin
install_requires =
  sinetstream>=1.1.0
  pyyaml
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
sinetstream.value_type =
    map_yaml = ssplugin.map_yaml:MapYamlValueType
